--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div id="_rating_card" class="card px-7 py-7 w-[360px] sm:w-[400px] rounded-3xl">
     <div class="bg-[#262f38] w-11 p-3.5 rounded-full">
-      <img src="/images/icon-star.svg" alt="" srcset="">
+      <img src="./images/icon-star.svg" alt="" srcset="">
     </div>
     <div class="text-white mt-7">
       <h2 class="text-3xl font-[500]">How did we do?</h2>
@@ -78,7 +78,7 @@
   <div id="_thank_you_card" class="hidden-card">
     <div class="card px-7 py-8 flex flex-col text-center items-center w-[360px] sm:w-[400px] rounded-3xl">
       <div class="">
-        <img src="/images/illustration-thank-you.svg" alt="" srcset="">
+        <img src="./images/illustration-thank-you.svg" alt="" srcset="">
       </div>
       <div class="mt-9 font-light text-[#fc7613] text-[15px] bg-[#262f38] px-4 rounded-full py-1">
         You selected <span id="_rate_num"></span> out of 5
