--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
 <body class="bg-[#141519] flex flex-col items-center justify-center h-screen">
 
-  <div id="_rating_card" class="card px-7 py-7 w-[360px] sm:w-[400px] rounded-3xl">
+  <main id="_rating_card" class="card px-7 py-7 w-[360px] sm:w-[400px] rounded-3xl">
     <div class="bg-[#262f38] w-11 p-3.5 rounded-full">
-      <img src="./images/icon-star.svg" alt="" srcset="">
+      <img src="./images/icon-star.svg" alt="icon">
     </div>
     <div class="text-white mt-7">
       <h2 class="text-3xl font-[500]">How did we do?</h2>
-      <p class="text-[15px] mt-2 text-[#7a818b]">Please let us know how we did with your support request. All feedback
+      <p class="text-[15px] mt-3 text-white/50">Please let us know how we did with your support request. All feedback
         is appreciated
         to
         help us improve our
@@ -73,7 +73,7 @@
     </div>
     <button id="_submit_button"
       class="bg-[#fc7613] w-full text-white hover:bg-white hover:text-[#fc7613] transition rounded-full tracking-[3px] py-2 mt-6">SUBMIT</button>
-  </div>
+  </main>
 
   <div id="_thank_you_card" class="hidden-card">
     <div class="card px-7 py-8 flex flex-col text-center items-center w-[360px] sm:w-[400px] rounded-3xl">
@@ -83,9 +83,9 @@
       <div class="mt-9 font-light text-[#fc7613] text-[15px] bg-[#262f38] px-4 rounded-full py-1">
         You selected <span id="_rate_num"></span> out of 5
       </div>
-      <div class="text-white mt-6">
+      <div class="text-white mt-7">
         <h2 class="text-3xl font-[500]">Thank you!</h2>
-        <p class="text-[15px] mt-2 text-[#7a818b]">We appreciate you taking the time to give a rating. If you ever need
+        <p class="text-[15px] mt-3 text-[#7a818b]">We appreciate you taking the time to give a rating. If you ever need
           more support, don't hestitate to get in touch!</p>
       </div>
 
