--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
   <div id="_thank_you_card" class="hidden-card">
     <div class="card px-7 py-8 flex flex-col text-center items-center w-[360px] sm:w-[400px] rounded-3xl">
       <div class="">
-        <img src="./images/illustration-thank-you.svg" alt="" srcset="">
+        <img src="./images/illustration-thank-you.svg" alt="image">
       </div>
       <div class="mt-9 font-light text-[#fc7613] text-[15px] bg-[#262f38] px-4 rounded-full py-1">
         You selected <span id="_rate_num"></span> out of 5
       </div>
       <div class="text-white mt-7">
         <h2 class="text-3xl font-[500]">Thank you!</h2>
-        <p class="text-[15px] mt-3 text-[#7a818b]">We appreciate you taking the time to give a rating. If you ever need
+        <p class="text-[15px] mt-3 text-white/50">We appreciate you taking the time to give a rating. If you ever need
           more support, don't hestitate to get in touch!</p>
       </div>
 
