--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <img src="./images/icon-star.svg" alt="icon">
     </div>
     <div class="text-white mt-7">
-      <h2 class="text-3xl font-[500]">How did we do?</h2>
+      <h1 class="text-3xl font-[500]">How did we do?</h1>
       <p class="text-[15px] mt-3 text-white/50">Please let us know how we did with your support request. All feedback
         is appreciated
         to
@@ -95,10 +95,10 @@
 
 
 
-  <div class="attribution text-white absolute bottom-0">
+  <footer class="attribution text-white absolute bottom-0">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">itsKrish01</a>.
-  </div>
+  </footer>
   <script src="script.js"></script>
 </body>
 
